# cooking-companion

./: MANIFEST.in  README.md  pyproject.toml  pytest.ini
cooking_companion/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cooking_companion/static/cooking_companion/: README.txt
cooking_companion/templates/cooking_companion/: _nav.html  _pagination.html  confirm_delete.html  cookresult_detail.html  cooksession_detail.html  cooksession_list.html  dashboard.html  dish_detail.html  dish_list.html  form.html  recipe_detail.html  recipe_list.html  target_detail.html
cooking_companion/templatetags/: cooking_nav.py
cooking_companion/tests/: test_models_smoke.py  test_views_smoke.py
test_project/: manage.py
test_project/test_project/: settings.py  urls.py  wsgi.py
